DTSBPS-687: fortify integration on nightly build (#2030)
* DTSBPS-687: fortify integration on nightly build

* DTSBPS-687: fortify integration on nightly build

* DTSBPS-687: fortify integration on nightly build

* DTSBPS-687: fortify integration on nightly build

* remove classifier

* DTSBPS-687: fortify integration on nightly build

Co-authored-by: mdayican <mustafa.dayican@hmcts.net>